Index.html cude box updated and main.Css as well

--- a/bootstrap-3.3.6-dist/index.html
+++ b/bootstrap-3.3.6-dist/index.html
@@ -142,10 +142,10 @@
 			<div style="height: 300px; margin-top:60px;">
 				<div class="cube-wrap vertical">
 					<div class="cube depth">
-						<div class="front-pane">Welcome</div>
-						<div class="back-pane">Fantasy</div>
-						<div class="top-pane">To</div>
-						<div class="bottom-pane">Barbershop</div>
+						<div class="front-pane"><img src="Images/logo3.jpg" alt="logo image" width="200" height="200"></div>
+						<div class="back-pane"><img src="Images/logo4.png" alt="logos image" width="200" height="200"></div>
+						<div class="top-pane">Welcome!!</div>
+						<div class="bottom-pane">Angel Inc.</div>
 						<div class="left-pane"></div>
 						<div class="right-pane"></div>
 					</div>
